@@ -1,7 +1,9 @@
 use strict;
 use warnings;
 
-use Test::More 'tests' => 2;
+use English;
+use Error::Pure::Utils qw(clean);
+use Test::More 'tests' => 3;
 use Test::NoWarnings;
 use WQS::SPARQL::Query::Count;
 
@@ -16,3 +18,11 @@ SELECT (COUNT(?item) as ?count) WHERE {
 }
 END
 is($sparql, $right_ret, 'Simple SPARQL count value query.');
+
+# Test.
+$obj = WQS::SPARQL::Query::Count->new;
+eval {
+	$obj->count_value(123);
+};
+is($EVAL_ERROR, "Bad property '123'.\n", "Bad property '123'.");
+clean();
